Added Java 6 as source and target. Also added MaxPermSize java option